--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
                         <p class="text-muted" style="font-size: 1.125rem; line-height: 1.8;">Founder-led. Hands-on. Direct execution.</p>
                     </div>
                     <div class="fade-in">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 500'%3E%3Crect fill='%23E5E7EB' width='400' height='500'/%3E%3Ctext x='50%25' y='50%25' font-size='24' fill='%236B7280' text-anchor='middle' dominant-baseline='middle'%3EFounder Image%3C/text%3E%3C/svg%3E" alt="Jayaditya Solanki" class="founder-img" style="width: 100%; max-width: 400px;">
+                        <img src="founder.jpg" alt="Jayaditya Solanki" class="founder-img" style="width: 100%; max-width: 400px;">
                     </div>
                 </div>
             </div>
