--- a/index.html
+++ b/index.html
@@ -640,8 +640,8 @@
                     <h2>Get Your Custom Outbound Breakdown</h2>
                     <p class="text-muted" style="margin-bottom: 3rem;">Submit your details and we'll send a short Loom showing exactly how outbound could work for your agency.</p>
 
-                    <form id="breakdownForm" name="breakdown" method="POST" data-netlify="true">
-                        <input type="hidden" name="form-name" value="breakdown">
+                    <form action="https://formspree.io/f/xreaglbo" method="POST">
+                        
                         <!-- Form is configured for Netlify Forms. Submissions are automatically captured and emailed to your account. -->
 
                         <div class="form-group">
