--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 
                         <div class="form-group">
                             <label for="website">Website</label>
-                            <input type="url" id="website" name="website" placeholder="https://youragency.com">
+                            <input type="text" id="website" name="website" placeholder="https://youragency.com">
                         </div>
 
                         <div class="form-group">
